fix(smart-playlist): ignore songs when creating a smart playlist (#1362)
